Added citation and DOI

--- a/spillover-of-violence/spillover-of-violence.html
+++ b/spillover-of-violence/spillover-of-violence.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Global Families Research Team">
-<meta name="dcterms.date" content="2025-04-15">
+<meta name="dcterms.date" content="2025-04-23">
 
 <title>The Spillover of Violence in Low- and Middle-Income Countries</title>
 <style>
@@ -22,7 +22,27 @@ ul.task-list li input[type="checkbox"] {
   margin: 0 0.8em 0.2em -1em; /* quarto-specific, see https://github.com/quarto-dev/quarto-cli/issues/4556 */ 
   vertical-align: middle;
 }
-</style>
+/* CSS for citations */
+div.csl-bib-body { }
+div.csl-entry {
+  clear: both;
+  margin-bottom: 0em;
+}
+.hanging-indent div.csl-entry {
+  margin-left:2em;
+  text-indent:-2em;
+}
+div.csl-left-margin {
+  min-width:2em;
+  float:left;
+}
+div.csl-right-inline {
+  margin-left:2em;
+  padding-left:1em;
+}
+div.csl-indent {
+  margin-left: 2em;
+}</style>
 
 
 <script src="spillover-of-violence_files/libs/clipboard/clipboard.min.js"></script>
@@ -70,9 +90,9 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-text-color-sidebar: black;
+          --cr-narrative-background-color-overlay: grey;
 --cr-section-background-color: white;
---cr-narrative-background-color-overlay: grey;
+--cr-narrative-text-color-sidebar: black;
 --cr-narrative-background-color-sidebar: white;
         }
       </style>
@@ -97,7 +117,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">April 15, 2025</p>
+      <p class="date">April 23, 2025</p>
     </div>
   </div>
   
@@ -140,22 +160,22 @@ ul.task-list li input[type="checkbox"] {
 <p>We employed multilevel logistic regression models.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.5" data-pan-to="25%,50%" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-focus-on="cr-analysis" data-pan-to="25%,50%" data-scale-by="1.5">
 <div class="narrative">
 <p>We estimated the factors associated with parental physical abuse.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.5" data-pan-to="-55%,50%" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-focus-on="cr-analysis" data-pan-to="-55%,50%" data-scale-by="1.5">
 <div class="narrative">
 <p>We controlled for country-level violence—measured by rates of terrorism and political conflict, homicide, and women’s exposure to IPV</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.5" data-pan-to="-75%,50%" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-focus-on="cr-analysis" data-pan-to="-75%,50%" data-scale-by="1.5">
 <div class="narrative">
 <p>We also controlled for other covariates, including norms justifying violence against women and children and socio-demographic factors.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.5" data-pan-to="-99%,50%" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-focus-on="cr-analysis" data-pan-to="-99%,50%" data-scale-by="1.5">
 <div class="narrative">
 <p>We accounted for the country in which study participants lived.</p>
 </div>
@@ -222,8 +242,8 @@ ul.task-list li input[type="checkbox"] {
 <div id="fig-2" class="cell-output-display quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="plotly html-widget html-fill-item" id="htmlwidget-c003777770c4ee736378" style="width:100%;height:464px;"></div>
-<script type="application/json" data-for="htmlwidget-c003777770c4ee736378">{"x":{"visdat":{"1e0642912a3a":["function () ","plotlyVisDat"]},"cur_data":"1e0642912a3a","attrs":{"1e0642912a3a":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#1CABE2","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"orthographic","rotation":{"lon":-25,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(28,171,226,1)"],["1","rgba(28,171,226,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div class="plotly html-widget html-fill-item" id="htmlwidget-ea82ec552f3b8c28aaf7" style="width:100%;height:464px;"></div>
+<script type="application/json" data-for="htmlwidget-ea82ec552f3b8c28aaf7">{"x":{"visdat":{"ac2238d23b9":["function () ","plotlyVisDat"]},"cur_data":"ac2238d23b9","attrs":{"ac2238d23b9":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#1CABE2","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"orthographic","rotation":{"lon":-25,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(28,171,226,1)"],["1","rgba(28,171,226,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Countries in UNICEF MICS Data
@@ -274,8 +294,8 @@ Figure&nbsp;1: Countries in UNICEF MICS Data
 <div id="cr-results2" class="sticky">
 <div class="cell">
 <div class="cell-output-display">
-<div id="htmlwidget-ef18b5651c834aa1061c" style="width:100%;height:483px;" class="plotly html-widget"></div>
-<script type="application/json" data-for="htmlwidget-ef18b5651c834aa1061c">{"x":{"visdat":{"1e0634db322":["function () ","plotlyVisDat"]},"cur_data":"1e0634db322","attrs":{"1e0634db322":{"x":{},"y":{},"text":{},"hoverinfo":"text","marker":{"size":15,"color":"#E2231A","line":{"color":"black","width":2}},"mode":"lines+markers","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"}},"layout":{"height":500,"margin":{"b":100,"l":50,"t":200,"r":50,"pad":4},"title":"As political violence and terrorism increase, <br>so does the probability of physical abuse.","xaxis":{"domain":[0,1],"automargin":true,"title":"percentile of political violence and terrorism"},"yaxis":{"domain":[0,1],"automargin":true,"title":"probability of abuse"},"hoverlabel":{"bgcolor":"white"},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"x":[1,50,75,90,95,99],"y":[0.1225253,0.12263159999999999,0.1260397,0.1299342,0.1444616,0.15793109999999999],"text":["percentile:  1 <br>probability of abuse: 0.1225253","percentile:  50 <br>probability of abuse: 0.1226316","percentile:  75 <br>probability of abuse: 0.1260397","percentile:  90 <br>probability of abuse: 0.1299342","percentile:  95 <br>probability of abuse: 0.1444616","percentile:  99 <br>probability of abuse: 0.1579311"],"hoverinfo":["text","text","text","text","text","text"],"marker":{"color":"#E2231A","size":15,"line":{"color":"black","width":2}},"mode":"lines+markers","type":"scatter","error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-c2addeaa97a83c7d917a" style="width:100%;height:483px;" class="plotly html-widget"></div>
+<script type="application/json" data-for="htmlwidget-c2addeaa97a83c7d917a">{"x":{"visdat":{"ac210ce39ba":["function () ","plotlyVisDat"]},"cur_data":"ac210ce39ba","attrs":{"ac210ce39ba":{"x":{},"y":{},"text":{},"hoverinfo":"text","marker":{"size":15,"color":"#E2231A","line":{"color":"black","width":2}},"mode":"lines+markers","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"}},"layout":{"height":500,"margin":{"b":100,"l":50,"t":200,"r":50,"pad":4},"title":"As political violence and terrorism increase, <br>so does the probability of physical abuse.","xaxis":{"domain":[0,1],"automargin":true,"title":"percentile of political violence and terrorism"},"yaxis":{"domain":[0,1],"automargin":true,"title":"probability of abuse"},"hoverlabel":{"bgcolor":"white"},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"x":[1,50,75,90,95,99],"y":[0.1225253,0.12263159999999999,0.1260397,0.1299342,0.1444616,0.15793109999999999],"text":["percentile:  1 <br>probability of abuse: 0.1225253","percentile:  50 <br>probability of abuse: 0.1226316","percentile:  75 <br>probability of abuse: 0.1260397","percentile:  90 <br>probability of abuse: 0.1299342","percentile:  95 <br>probability of abuse: 0.1444616","percentile:  99 <br>probability of abuse: 0.1579311"],"hoverinfo":["text","text","text","text","text","text"],"marker":{"color":"#E2231A","size":15,"line":{"color":"black","width":2}},"mode":"lines+markers","type":"scatter","error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 <p>As political violence and terrorism increase, so does the probability of physical abuse</p>
 </div>
 </div>
@@ -355,7 +375,12 @@ Figure&nbsp;1: Countries in UNICEF MICS Data
 </div>
 </div>
 
-</main>
+
+<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="ref-Ma2025" class="csl-entry" role="listitem">
+Ma, Julie, Andrew Grogan-Kaylor, Kaitlin P. Ward, Elizabeth H. Boyle, Olivia D. Chang, and Garrett T. Pace. 2025. <span>“Spillover of Macro-Level Violence to Parental Physical Abuse of Children in Low- and Middle-Income Countries.”</span> <em>Child Abuse &amp; Neglect</em> 164 (June): 107468. <a href="https://doi.org/10.1016/j.chiabu.2025.107468">https://doi.org/10.1016/j.chiabu.2025.107468</a>.
+</div>
+</div></section></div></main>
 <!-- /main column -->
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
