--- a/parenting.html
+++ b/parenting.html
@@ -57,10 +57,10 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
---cr-narrative-background-color-overlay: grey;
---cr-narrative-text-color-sidebar: black;
+          --cr-narrative-background-color-overlay: grey;
 --cr-narrative-background-color-sidebar: white;
+--cr-narrative-text-color-sidebar: black;
+--cr-section-background-color: white;
         }
       </style>
     
@@ -87,12 +87,12 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting" data-scale-by=".75">
+<div class="trigger new-trigger" data-scale-by=".75" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Parents raise their children in a variety of ways.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting" data-scale-by="1.1">
+<div class="trigger new-trigger" data-scale-by="1.1" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>The objective of this study was to test the associations between 11 caregiver aggressive and nonaggressive discipline behaviors and outcomes (aggression and prosocial peer relations) of children under 5 in low- and middle-income countries (LMICs).</p>
 </div>
@@ -102,12 +102,12 @@ ul.task-list li input[type="checkbox"] {
 <p>Data came from the fourth (2009-2013) and fifth (2012-2017) rounds of the UNICEF Multiple Indicator Cluster Surveys (MICS).</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-mymap" data-scale-by="1.25">
+<div class="trigger new-trigger" data-scale-by="1.25" data-focus-on="cr-mymap">
 <div class="narrative">
 <p>Analyses were restricted to households with children under 5 years, leaving a sample of 229,465 respondents across 60 LMICs.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-equation" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-equation">
 <div class="narrative">
 <p>Data were analyzed using a statistical method known as Bayesian multilevel logistic regression.</p>
 </div>
@@ -152,22 +152,22 @@ ul.task-list li input[type="checkbox"] {
 <p>However, the associations of discipline with child outcomes were still largely consistent across countries.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".6">
+<div class="trigger new-trigger" data-scale-by=".6" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Psychological and physical aggression were disadvantageous for children’s socio-emotional development across countries.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".7">
+<div class="trigger new-trigger" data-scale-by=".7" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Only verbal reasoning was associated with positive child socio-emotional development.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".8">
+<div class="trigger new-trigger" data-scale-by=".8" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>No form of psychological aggression or physical aggression benefited child socio-emotional development in any country.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".9">
+<div class="trigger new-trigger" data-scale-by=".9" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Greater emphasis should be dedicated to reducing parental use of psychological and physical aggression across cultural contexts.</p>
 </div>
@@ -187,7 +187,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
 <p><img src="mymap.png" class="img-fluid figure-img"></p>
-<figcaption>Countries of the World</figcaption>
+<figcaption>Countries in MICS</figcaption>
 </figure>
 </div>
 </div>
