\n -> <br> in mermaid; Robinson projection for earth

--- a/spillover-of-violence/spillover-of-violence.html
+++ b/spillover-of-violence/spillover-of-violence.html
@@ -100,10 +100,10 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
---cr-narrative-background-color-sidebar: white;
+          --cr-narrative-text-color-sidebar: black;
+--cr-section-background-color: white;
 --cr-narrative-background-color-overlay: grey;
---cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -170,22 +170,22 @@ div.csl-indent {
 <p>We employed multilevel logistic regression models.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="25%,50%" data-scale-by="1.5" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-pan-to="25%,50%" data-focus-on="cr-analysis" data-scale-by="1.5">
 <div class="narrative">
 <p>We estimated the factors associated with parental physical abuse.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-55%,50%" data-scale-by="1.5" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-pan-to="-55%,50%" data-focus-on="cr-analysis" data-scale-by="1.5">
 <div class="narrative">
 <p>We controlled for country-level violence—measured by rates of terrorism and political conflict, homicide, and women’s exposure to IPV</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-75%,50%" data-scale-by="1.5" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-pan-to="-75%,50%" data-focus-on="cr-analysis" data-scale-by="1.5">
 <div class="narrative">
 <p>We also controlled for other covariates, including norms justifying violence against women and children and socio-demographic factors.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-99%,50%" data-scale-by="1.5" data-focus-on="cr-analysis">
+<div class="trigger new-trigger" data-pan-to="-99%,50%" data-focus-on="cr-analysis" data-scale-by="1.5">
 <div class="narrative">
 <p>We accounted for the country in which study participants lived.</p>
 </div>
@@ -233,9 +233,9 @@ div.csl-indent {
   classDef orange fill:#F26A21,stroke:#000000,stroke-width:2px,color:#FFFFFF;
   
 
-  macroviolence[higher rates of \nviolence in the \nmacro context]:::red --&gt; |"???"| pabuse[physical child abuse]:::yellow
+  macroviolence[higher rates of &lt;br&gt;violence in the &lt;br&gt;macro context]:::red --&gt; |"???"| pabuse[physical child abuse]:::yellow
   
-  norms[norms justifying \nviolence]:::orange --&gt; pabuse
+  norms[norms justifying &lt;br&gt;violence]:::orange --&gt; pabuse
 
   %% Links %%
   linkStyle 0 stroke:#E2231A,stroke-width:2px,color:red;
@@ -252,8 +252,8 @@ div.csl-indent {
 <div id="fig-2" class="cell-output-display quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="plotly html-widget html-fill-item" id="htmlwidget-c927f7b63a9d692ac627" style="width:100%;height:464px;"></div>
-<script type="application/json" data-for="htmlwidget-c927f7b63a9d692ac627">{"x":{"visdat":{"25947254e8e":["function () ","plotlyVisDat"]},"cur_data":"25947254e8e","attrs":{"25947254e8e":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#1CABE2","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"orthographic","rotation":{"lon":-25,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(28,171,226,1)"],["1","rgba(28,171,226,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div class="plotly html-widget html-fill-item" id="htmlwidget-e59cf282eb68ed042de8" style="width:100%;height:464px;"></div>
+<script type="application/json" data-for="htmlwidget-e59cf282eb68ed042de8">{"x":{"visdat":{"3614734c6b48":["function () ","plotlyVisDat"]},"cur_data":"3614734c6b48","attrs":{"3614734c6b48":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#1CABE2","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"robinson","rotation":{"lon":-25,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(28,171,226,1)"],["1","rgba(28,171,226,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Countries in UNICEF MICS Data
@@ -287,9 +287,9 @@ Figure&nbsp;1: Countries in UNICEF MICS Data
   classDef orange fill:#F26A21,stroke:#000000,stroke-width:2px,color:#FFFFFF;
   
   
-  IPV[higher levels of \nendorsement of IPV]:::orange --&gt; pabuse[physical child abuse]:::yellow
+  IPV[higher levels of &lt;br&gt;endorsement of IPV]:::orange --&gt; pabuse[physical child abuse]:::yellow
   
-  CP[attitudes endorsing \ncorporal punishment]:::orange --&gt; pabuse
+  CP[attitudes endorsing &lt;br&gt;corporal punishment]:::orange --&gt; pabuse
   
   %% Links %%
   linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
@@ -304,8 +304,8 @@ Figure&nbsp;1: Countries in UNICEF MICS Data
 <div id="cr-results2" class="scale-to-fill sticky">
 <div class="cell">
 <div class="cell-output-display">
-<div id="htmlwidget-cb281b4838d9d1e0b30b" style="width:100%;height:677px;" class="plotly html-widget"></div>
-<script type="application/json" data-for="htmlwidget-cb281b4838d9d1e0b30b">{"x":{"visdat":{"259442437606":["function () ","plotlyVisDat"]},"cur_data":"259442437606","attrs":{"259442437606":{"x":{},"y":{},"text":{},"hoverinfo":"text","marker":{"size":15,"color":"#E2231A","line":{"color":"black","width":2}},"mode":"lines+markers","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"}},"layout":{"height":700,"margin":{"b":100,"l":50,"t":200,"r":50,"pad":4},"title":"As political violence and terrorism increase, <br>so does the probability of physical abuse.","xaxis":{"domain":[0,1],"automargin":true,"title":"percentile of political violence and terrorism"},"yaxis":{"domain":[0,1],"automargin":true,"title":"probability of abuse"},"hoverlabel":{"bgcolor":"white"},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"x":[1,50,75,90,95,99],"y":[0.1225253,0.12263159999999999,0.1260397,0.1299342,0.1444616,0.15793109999999999],"text":["percentile of political violence and terrorism:  1 <br>probability of abuse: 0.1225253","percentile of political violence and terrorism:  50 <br>probability of abuse: 0.1226316","percentile of political violence and terrorism:  75 <br>probability of abuse: 0.1260397","percentile of political violence and terrorism:  90 <br>probability of abuse: 0.1299342","percentile of political violence and terrorism:  95 <br>probability of abuse: 0.1444616","percentile of political violence and terrorism:  99 <br>probability of abuse: 0.1579311"],"hoverinfo":["text","text","text","text","text","text"],"marker":{"color":"#E2231A","size":15,"line":{"color":"black","width":2}},"mode":"lines+markers","type":"scatter","error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-f1d5f6d4a073a4e3dc2d" style="width:100%;height:677px;" class="plotly html-widget"></div>
+<script type="application/json" data-for="htmlwidget-f1d5f6d4a073a4e3dc2d">{"x":{"visdat":{"3614134e2ac4":["function () ","plotlyVisDat"]},"cur_data":"3614134e2ac4","attrs":{"3614134e2ac4":{"x":{},"y":{},"text":{},"hoverinfo":"text","marker":{"size":15,"color":"#E2231A","line":{"color":"black","width":2}},"mode":"lines+markers","alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"type":"scatter"}},"layout":{"height":700,"margin":{"b":100,"l":50,"t":200,"r":50,"pad":4},"title":"As political violence and terrorism increase, <br>so does the probability of physical abuse.","xaxis":{"domain":[0,1],"automargin":true,"title":"percentile of political violence and terrorism"},"yaxis":{"domain":[0,1],"automargin":true,"title":"probability of abuse"},"hoverlabel":{"bgcolor":"white"},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"x":[1,50,75,90,95,99],"y":[0.1225253,0.12263159999999999,0.1260397,0.1299342,0.1444616,0.15793109999999999],"text":["percentile of political violence and terrorism:  1 <br>probability of abuse: 0.1225253","percentile of political violence and terrorism:  50 <br>probability of abuse: 0.1226316","percentile of political violence and terrorism:  75 <br>probability of abuse: 0.1260397","percentile of political violence and terrorism:  90 <br>probability of abuse: 0.1299342","percentile of political violence and terrorism:  95 <br>probability of abuse: 0.1444616","percentile of political violence and terrorism:  99 <br>probability of abuse: 0.1579311"],"hoverinfo":["text","text","text","text","text","text"],"marker":{"color":"#E2231A","size":15,"line":{"color":"black","width":2}},"mode":"lines+markers","type":"scatter","error_y":{"color":"rgba(31,119,180,1)"},"error_x":{"color":"rgba(31,119,180,1)"},"line":{"color":"rgba(31,119,180,1)"},"xaxis":"x","yaxis":"y","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 </div>
 </div>
 </div>
@@ -327,7 +327,7 @@ Figure&nbsp;1: Countries in UNICEF MICS Data
   
   classDef red fill:#9A3324,stroke:#000000,stroke-width:2px,color:#FFFFFF;
 
-  interventions:::green --&gt; IPV[lower levels of \nendorsement of IPV]:::blue
+  interventions:::green --&gt; IPV[lower levels of &lt;br&gt;endorsement of IPV]:::blue
   
   IPV --&gt; pabuse[less physical child abuse]:::yellow
   
@@ -362,13 +362,13 @@ Figure&nbsp;1: Countries in UNICEF MICS Data
   
   classDef red fill:#9A3324,stroke:#000000,stroke-width:2px,color:#FFFFFF;
 
-  interventions:::green --&gt; IPV[lower levels of \nendorsement of IPV]:::blue
+  interventions:::green --&gt; IPV[lower levels of &lt;br&gt;endorsement of IPV]:::blue
   
   IPV --&gt; pabuse[less physical child abuse]:::yellow
   
   interventions --&gt; pabuse
   
-  trauma[trauma informed \napproaches]:::red --&gt; interventions
+  trauma[trauma informed &lt;br&gt;approaches]:::red --&gt; interventions
   
   %% Links %%
   linkStyle 0 stroke:#00274C,stroke-width:2px,color:E2231A;
